--- a/spring-Test/src/main/webapp/WEB-INF/web.xml
+++ b/spring-Test/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,15 @@
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		
+		<!-- 231012추가 -->
+		<multipart-config>
+			<location>D:\_myweb\_java\fileupload</location> <!-- 내파일 업로드 경로 -->
+			<max-file-size>20971520</max-file-size>
+			<max-request-size>41943040</max-request-size>
+			<file-size-threshold>20971520</file-size-threshold>
+		</multipart-config>
+	
 	</servlet>
 		
 	<servlet-mapping>
